# otus-python-base

./: .gitignore  README.md
homework_01/: main.py
homework_02/: base.py  car.py  exceptions.py  plane.py
homework_03/: Dockerfile  main.py  pyproject.toml  requirements.txt
