[tool.poetry]
name = "homework-03"
version = "0.1.0"
description = ""
authors = ["i.bulanov <i.bulanov@fork-tech.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
